# clauseiq

./: .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: eval_cases.json
data/contracts/: msa_01.txt  msa_02.txt  msa_03.txt  msa_04.txt
notebooks/: Run_in_Colab.ipynb
scripts/: generate_contracts.py
src/clauseiq/: __init__.py  agent.py  api.py  chunking.py  cli.py  config.py  embeddings.py  llm.py  pipeline.py  schemas.py  ui_streamlit.py  vectorstore.py
src/clauseiq/eval/: harness.py
tests/: test_chunking.py  test_pipeline.py  test_vectorstore.py
