[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "clauseiq"
version = "0.1.0"
description = "Agentic RAG for legal & contract document intelligence"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Akshay Birla" }]
dependencies = [
    "pydantic>=2.5",
    "fastapi>=0.110",
    "uvicorn>=0.27",
]

[project.optional-dependencies]
ml = ["sentence-transformers>=2.2", "numpy>=1.24"]
llm = ["openai>=1.14"]
ui = ["streamlit>=1.30"]
dev = ["pytest>=8.0", "pytest-cov>=4.1", "httpx>=0.27", "ruff>=0.4"]

[project.scripts]
clauseiq = "clauseiq.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py310"
